challenge_10/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: ktaktak  
  annotations:
    kubernetes.io/ingress.class: "nginx" 
spec:
  rules:
  - host: webnodb.ktaktak.net4255.luxbulb.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webnodb-service
            port:
              number: 80
  - host: webdb.ktaktak.net4255.luxbulb.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webdb-service
            port:
              number: 80
